tests/errors/semantics/expects_identifier_after_bang_in_parameters.odl
main :: () -> void {
    x :: (!1, int) -> int
};
